Updated image tags for a11y

--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
   <body>
     <main>
       <section class="card">
-        <img class="card__image" src="./images/illustration-hero.svg" />
+        <img
+          class="card__image"
+          src="./images/illustration-hero.svg"
+          alt="music-hero-image"
+        />
         <h1 class="card__title">Order Summary</h1>
         <p class="card__text">
           You can now listen to millions of songs, audiobooks, and podcasts on
           any device anywhere you like!
         </p>
         <section class="card__price">
-          <img src="./images/icon-music.svg" />
+          <img src="./images/icon-music.svg" alt="music icon" />
           <div class="card__price-text">
             <h4>Annual Plan</h4>
             <span>$59.99/year</span>
